# Leads

./: README.md  brands.csv  google_search.py  input_brands.csv  leads.csv  main.py  main_sample.py  progress.txt  pyproject.toml  test.py
.github/workflows/: daily_leads.yml
